added daily tasks, still needs review
